deployment_deamonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: deamon
  labels:
    app: test
spec:
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      volumes:
      - name: syslog
        hostPath:
          path: /var/log
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        volumeMounts:
        - mountPath: /share
          name: syslog
