deployment_nfc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nfs
  template:
    metadata:
      labels:
        app: my-nfs
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        volumeMounts:
          - name: volume-nfs
            mountPath: /share
      volumes:
      - name: volume-nfs
        persistentVolumeClaim:
          claimName: mynfs
