deployment_share.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      volumes:
        - name: data
          emptyDir: {}
      containers:
      - name: init-share
        image: busybox:1.28
        command: ['sh', '-c', 'while true; do echo Success! >> /opt/success.txt; sleep 5; done' ]
        volumeMounts:
          - mountPath: /opt
            name: data
      - name: multitool
        image: wbitt/network-multitool
        ports:
        volumeMounts:
          - mountPath: /opt
            name: data
