service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: multitool
  ports:
    - name: multitool
      protocol: TCP
      port: 80
      targetPort: 80
