service_init.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-init
spec:
  selector:
    app: nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
