service_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx-web
spec:
  selector:
    app: nginx-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
