service_node.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-node
spec:
  selector:
    app: nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      nodePort: 30080
  type: NodePort
